2009-06-01  kitone  <kitone@gna.org>

	* src/spellchecker.cc:
	Use enchant_dict_add instead of enchant_dict_add_to_pwl (deprecated).

2009-06-01  kitone  <kitone@gna.org>

	* plugins/actions/spellchecking/Makefile.am:
	* plugins/actions/spellchecking/spellchecking.h:
	Remove file spellchecking.h.

	* plugins/actions/spellchecking/dialog-spell-checking.glade:
	* plugins/actions/spellchecking/spellchecking.cc:
	Complete rewrite of the spellchecking plugin. 
	Use the SpellChecker, can check the translation. 

2009-06-01  kitone  <kitone@gna.org>

	* src/document.cc:
	* src/document.h:
	* src/subtitleview.cc:
	* src/subtitleview.h:
	New function get_current_column_name.

2009-05-30  kitone  <kitone@gna.org>

	* src/spellchecker.cc:
	Don't check number.

2009-05-28  kitone  <kitone@gna.org>

	* plugins/actions/scalesubtitles/scalesubtitles.cc:
	More robust with the wrong values of the points, display error messages.

2009-05-28  kitone  <kitone@gna.org>

	* src/gui/automaticspellchecker.cc:
	* src/gui/automaticspellchecker.h:
	Don't split a word with apostrophe.

2009-05-25  kitone  <kitone@gna.org>

	* src/gui/automaticspellchecker.cc:
	Change icon 'goto-bottom' to 'remove'.

2009-05-25  kitone  <kitone@gna.org>

	* src/spellchecker.cc:
	Add debug msg.

2009-05-23  kitone  <kitone@gna.org>

	* src/gui/textviewcell.cc:
	Add a SpellChecker capability to any TextViewCell.

2009-05-23  kitone  <kitone@gna.org>

	* src/Makefile.am:
	Add new files automaticspellchecker.h and automaticspellchecker.cc.

	* src/gui/automaticspellchecker.cc:
	* src/gui/automaticspellchecker.h:
	Introduce a new class AutomaticSpellChecker.

2009-05-23  kitone  <kitone@gna.org>

	* src/Makefile.am:
	Add new files spellchecker.h and spellchecker.cc.

	* src/spellchecker.cc:
	* src/spellchecker.h:
	Introduce a new class SpellChecker inside the libsubtitleeditor.

2009-05-16  kitone  <kitone@gna.org>

	* plugins/actions/preferences/dialog-preferences.glade: