@@ -1,16 +1,16 @@
 SUBDIRS = icons glade
 
-subtitleeditor_pixmapsdir = $(PACKAGE_SHARE_DIR)
+pixmapdir = $(datadir)/pixmaps
+pixmap_DATA = subtitleeditor.svg
+
+uidir = $(PACKAGE_SHARE_DIR)
+ui_DATA = menubar.xml
 
 desktopdir = $(datadir)/applications
 desktop_in_files = subtitleeditor.desktop.in
 desktop_DATA = $(desktop_in_files:.desktop.in=.desktop)
 
 @INTLTOOL_DESKTOP_RULE@
-
-subtitleeditor_pixmaps_DATA = \
-							menubar.xml \
-							subtitleeditor.svg
 
 gtk_update_icon_cache = gtk-update-icon-cache -f -t $(datadir)/icons/hicolor
 
@@ -23,9 +23,6 @@ install-data-hook:
 		echo "***   $(gtk_update_icon_cache)"; \
 	fi
 
-
-EXTRA_DIST = $(subtitleeditor_pixmaps_DATA) $(desktop_in_files)
+EXTRA_DIST = $(pixmap_DATA) $(ui_DATA) $(desktop_in_files)
 
 CLEANFILES = Makefile.am~ *.c~ *.h~ *.glade~ *.gladep *.gladep.bak $(desktop_DATA)
-
-
