@@ -1,3 +1,8 @@
+2009-06-02  kitone  <kitone@gna.org>
+
+	* share/Makefile.am:
+	Fix: Install icon to the pixmaps directory.
+
 2009-06-01  kitone  <kitone@gna.org>
 
 	* src/spellchecker.cc:
